complete basic categories routing

--- a/views/household_appliances.pug
+++ b/views/household_appliances.pug
@@ -2,11 +2,11 @@ extends layout
 
 block content
   h1= title
+  a(href="/") Home
+  |  
   a(href="/phones_accessories") Phones & Accessories
   |  
   a(href="/computers_laptops") Computers & Laptops
-  |  
-  a(href="/household_appliances") Household Appliances
   |  
   a(href="/beauty_shop_electronics") Beauty Shop Electronics
   |  
