--- a/views/phones_accessories.pug
+++ b/views/phones_accessories.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  a(href="/phones_accessories") Phones & Accessories
+  a(href="/") Home
   |  
   a(href="/computers_laptops") Computers & Laptops
   |  
