--- a/views/computers_laptops.pug
+++ b/views/computers_laptops.pug
@@ -2,9 +2,9 @@ extends layout
 
 block content
   h1= title
-  a(href="/phones_accessories") Phones & Accessories
+  a(href="/") Home
   |  
-  a(href="/computers_laptops") Computers & Laptops
+  a(href="/phones_accessories") Phones & Accessories
   |  
   a(href="/household_appliances") Household Appliances
   |  
